# origami-fold

./: .gitmodules  .travis.yml  LICENSE  README.md  default.nix  middle-out.cabal  origami-fold.cabal  origami-fold.nix  package.yaml  shell.nix
bench/: Bench.hs
src/Data/: MiddleOut.hs  Origami.hs
src/Data/Origami/: Class.hs  List.hs
src/Origami/: Fold.hs
tests/: Test.hs
