name:           origami-fold
version:        0.1.0.0
author:         S. M. Hickman
maintainer:     sean@grump.ly
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

source-repository head
  type: git
  location: https://github.com/grumply/origami-fold.git

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.8
    , containers
  exposed-modules:
      Origami.Fold
  default-language: Haskell2010

